--- a/index.html
+++ b/index.html
@@ -1,67 +1,192 @@
 <!doctype html>
-<th class="px-3 py-2 text-right">Input PCS</th>
-<th class="px-3 py-2 text-right">Stok Baru (pcs)</th>
-<th class="px-3 py-2 text-right">Δ (pcs)</th>
-<th class="px-3 py-2">Aksi</th>
-</tr>
-</thead>
-<tbody id="items-body"></tbody>
-</table>
-</div>
-<div class="p-3 text-xs text-slate-500">Tip: Isi salah satu—berat total <em>atau</em> PCS. Sistem akan hitung otomatis.</div>
-</section>
-</main>
+<html lang="ja">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>東京精密発條株式会社システム</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="assets/tsh.png" />
+  <meta property="og:image" content="assets/tsh.png" />
+  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="assets/print.css" media="print" />
+  <!-- ライブラリ -->
+  <script defer src="https://unpkg.com/html5-qrcode"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+</head>
+<body class="bg-slate-50 text-slate-800 min-h-screen">
+  <!-- Topbar -->
+  <header class="sticky top-0 z-10 bg-white/80 backdrop-blur border-b border-slate-200">
+    <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <img src="assets/tsh.png" alt="logo" class="w-8 h-8 rounded" />
+        <h1 class="text-lg md:text-xl font-semibold">在庫管理</h1>
+      </div>
+      <nav class="flex gap-2">
+        <button id="btn-scan" class="px-3 py-2 rounded-xl border hover:bg-slate-100">QRをスキャン</button>
+        <button id="btn-add" class="px-3 py-2 rounded-xl border hover:bg-slate-100">品目を追加</button>
+        <button id="btn-import" class="px-3 py-2 rounded-xl border hover:bg-slate-100">CSV取込</button>
+        <button id="btn-export" class="px-3 py-2 rounded-xl border hover:bg-slate-100">CSV出力</button>
+        <div class="relative">
+          <button id="btn-sync" class="px-3 py-2 rounded-xl border hover:bg-slate-100">シート同期</button>
+          <div id="sync-menu" class="hidden absolute right-0 mt-1 bg-white border rounded-xl shadow">
+            <button id="btn-sync-pull" class="block px-3 py-2 w-full text-left hover:bg-slate-100">読み込み</button>
+            <button id="btn-sync-push" class="block px-3 py-2 w-full text-left hover:bg-slate-100">書き込み</button>
+          </div>
+        </div>
+        <button id="btn-close-month" class="px-3 py-2 rounded-xl border hover:bg-slate-100">月次締め</button>
+        <button id="btn-close-year" class="px-3 py-2 rounded-xl border hover:bg-slate-100">年度開始に設定</button>
+        <button onclick="window.print()" class="px-3 py-2 rounded-xl border hover:bg-slate-100">印刷</button>
+      </nav>
+    </div>
+  </header>
 
+  <!-- メイン -->
+  <main class="max-w-7xl mx-auto p-4">
+    <!-- QR指定時の入力カード（?id=... で自動表示） -->
+    <section id="input-card" class="hidden mb-4">
+      <div class="bg-white rounded-2xl border shadow-sm p-4">
+        <div class="flex items-center justify-between mb-2">
+          <div>
+            <div class="text-xs text-slate-500">対象品目</div>
+            <div id="ic-title" class="text-lg font-semibold">-</div>
+            <div id="ic-sub" class="text-xs text-slate-500">-</div>
+          </div>
+          <div class="flex items-center gap-2">
+            <span class="text-xs px-2 py-1 rounded bg-slate-100 border">QR入力モード</span>
+          </div>
+        </div>
+        <div class="grid md:grid-cols-3 gap-3">
+          <label class="grid">
+            <span class="text-sm">総重量 (g)</span>
+            <input id="ic-weight" type="number" step="0.01" min="0" class="px-3 py-2 rounded-xl border" />
+          </label>
+          <label class="grid">
+            <span class="text-sm">PCS</span>
+            <input id="ic-count" type="number" step="1" min="0" class="px-3 py-2 rounded-xl border" />
+          </label>
+          <div class="flex items-end gap-2">
+            <button id="ic-ok" class="px-4 py-2 rounded-xl bg-slate-900 text-white">OK</button>
+            <button id="ic-cancel" class="px-4 py-2 rounded-xl border">クリア</button>
+          </div>
+        </div>
 
-<!-- Modals -->
-<div id="modal-scan" class="hidden fixed inset-0 bg-black/40 grid place-items-center p-4">
-<div class="bg-white w-full max-w-lg rounded-2xl p-4 shadow-xl">
-<div class="flex items-center justify-between mb-2">
-<h2 class="text-lg font-semibold">Scan QR</h2>
-<button class="px-2 py-1 rounded-lg border" data-close>✕</button>
-</div>
-<div id="qr-reader" class="rounded-xl overflow-hidden border"></div>
-<div id="qr-reader-results" class="mt-2 text-sm text-slate-600"></div>
-</div>
-</div>
+        <!-- チャート -->
+        <div class="mt-4 grid md:grid-cols-3 gap-4">
+          <div class="p-3 rounded-xl border bg-slate-50">
+            <div class="text-xs text-slate-500">先月在庫</div>
+            <div id="ic-last" class="text-2xl font-semibold">-</div>
+          </div>
+          <div class="p-3 rounded-xl border bg-slate-50">
+            <div class="text-xs text-slate-500">現在在庫</div>
+            <div id="ic-now" class="text-2xl font-semibold">-</div>
+          </div>
+          <div class="p-3 rounded-xl border bg-slate-50">
+            <div class="text-xs text-slate-500">年度残数</div>
+            <div id="ic-annual" class="text-2xl font-semibold">-</div>
+          </div>
+        </div>
+        <div class="mt-4 bg-white rounded-xl border p-3">
+          <canvas id="ic-chart"></canvas>
+        </div>
+      </div>
+    </section>
 
+    <!-- フィルタ & テーブル -->
+    <section class="mb-4 grid grid-cols-1 md:grid-cols-3 gap-3">
+      <input id="search" type="search" placeholder="名称 / ID を検索…" class="px-3 py-2 rounded-xl border" />
+      <select id="view-month" class="px-3 py-2 rounded-xl border">
+        <option value="current">表示: 当月</option>
+        <option value="last">表示: 先月在庫</option>
+      </select>
+      <div class="flex items-center gap-2">
+        <label class="text-sm">表示列:</label>
+        <select id="view-columns" class="px-3 py-2 rounded-xl border">
+          <option value="basic">基本</option>
+          <option value="all">先月/現在/年度残を全て</option>
+        </select>
+      </div>
+    </section>
 
-<div id="modal-item" class="hidden fixed inset-0 bg-black/40 grid place-items-center p-4">
-<div class="bg-white w-full max-w-lg rounded-2xl p-4 shadow-xl">
-<div class="flex items-center justify-between mb-2">
-<h2 class="text-lg font-semibold">Tambah / Edit Item</h2>
-<button class="px-2 py-1 rounded-lg border" data-close>✕</button>
-</div>
-<form id="item-form" class="grid gap-2">
-<label class="grid">
-<span class="text-sm">QR/Item ID</span>
-<input name="id" required class="px-3 py-2 rounded-xl border" placeholder="contoh: BT-M6-20" />
-</label>
-<label class="grid">
-<span class="text-sm">Nama</span>
-<input name="name" required class="px-3 py-2 rounded-xl border" placeholder="Baut M6 x 20" />
-</label>
-<label class="grid">
-<span class="text-sm">Berat per pcs (gram)</span>
-<input name="unitWeight" type="number" step="0.01" min="0" required class="px-3 py-2 rounded-xl border" />
-</label>
-<label class="grid">
-<span class="text-sm">Default mode per item</span>
-<select name="mode" class="px-3 py-2 rounded-xl border">
-<option value="weight">Weight → pcs</option>
-<option value="count">Direct pcs</option>
-</select>
-</label>
-<div class="flex gap-2 justify-end mt-2">
-<button type="button" class="px-3 py-2 rounded-xl border" data-close>Batal</button>
-<button class="px-3 py-2 rounded-xl bg-slate-900 text-white">Simpan</button>
-</div>
-</form>
-</div>
-</div>
+    <section class="bg-white rounded-2xl shadow-sm border overflow-hidden">
+      <div class="overflow-x-auto">
+        <table class="w-full text-sm" id="items-table">
+          <thead class="bg-slate-100 text-slate-700">
+            <tr>
+              <th class="px-3 py-2 text-left">QR/ID</th>
+              <th class="px-3 py-2 text-left">名称</th>
+              <th class="px-3 py-2 text-right">重量/個 (g)</th>
+              <th class="px-3 py-2 text-right">先月在庫</th>
+              <th class="px-3 py-2 text-right">現在在庫</th>
+              <th class="px-3 py-2 text-right">年度開始在庫</th>
+              <th class="px-3 py-2 text-right">年度残数</th>
+              <th class="px-3 py-2">操作</th>
+            </tr>
+          </thead>
+          <tbody id="items-body"></tbody>
+        </table>
+      </div>
+      <div class="p-3 text-xs text-slate-500">ヒント: QRをスキャンすると該当行にジャンプし、入力カードが上部に開きます。</div>
+    </section>
+  </main>
 
+  <!-- モーダル: QRスキャナ -->
+  <div id="modal-scan" class="hidden fixed inset-0 bg-black/40 grid place-items-center p-4">
+    <div class="bg-white w-full max-w-lg rounded-2xl p-4 shadow-xl">
+      <div class="flex items-center justify-between mb-2">
+        <h2 class="text-lg font-semibold">QRをスキャン</h2>
+        <button class="px-2 py-1 rounded-lg border" data-close>✕</button>
+      </div>
+      <div id="qr-reader" class="rounded-xl overflow-hidden border"></div>
+      <div id="qr-reader-results" class="mt-2 text-sm text-slate-600"></div>
+    </div>
+  </div>
 
-<!-- Scripts -->
-<script type="module" src="js/app.js"></script>
+  <!-- モーダル: 品目追加/編集 -->
+  <div id="modal-item" class="hidden fixed inset-0 bg-black/40 grid place-items-center p-4">
+    <div class="bg-white w-full max-w-lg rounded-2xl p-4 shadow-xl">
+      <div class="flex items-center justify-between mb-2">
+        <h2 class="text-lg font-semibold">品目の追加 / 編集</h2>
+        <button class="px-2 py-1 rounded-lg border" data-close>✕</button>
+      </div>
+      <form id="item-form" class="grid gap-2">
+        <label class="grid">
+          <span class="text-sm">QR/品目ID</span>
+          <input name="id" required class="px-3 py-2 rounded-xl border" placeholder="例: BT-M6-20" />
+        </label>
+        <label class="grid">
+          <span class="text-sm">名称</span>
+          <input name="name" required class="px-3 py-2 rounded-xl border" placeholder="ボルト M6 x 20" />
+        </label>
+        <label class="grid">
+          <span class="text-sm">重量/個 (g)</span>
+          <input name="unitWeight" type="number" step="0.01" min="0" required class="px-3 py-2 rounded-xl border" />
+        </label>
+        <label class="grid">
+          <span class="text-sm">既定モード</span>
+          <select name="mode" class="px-3 py-2 rounded-xl border">
+            <option value="weight">重量→PCS</option>
+            <option value="count">PCS直接</option>
+          </select>
+        </label>
+        <label class="grid">
+          <span class="text-sm">年度開始在庫 (pcs)</span>
+          <input name="yearStart" type="number" step="1" min="0" value="0" class="px-3 py-2 rounded-xl border" />
+        </label>
+        <div class="flex gap-2 justify-end mt-2">
+          <button type="button" class="px-3 py-2 rounded-xl border" data-close>キャンセル</button>
+          <button class="px-3 py-2 rounded-xl bg-slate-900 text-white">保存</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <!-- フッター -->
+  <footer class="max-w-7xl mx-auto px-4 py-6 text-xs text-slate-500 flex items-center justify-between">
+    <div>© <span id="year"></span> Inventory Control</div>
+    <div class="italic">Design by Wahyu</div>
+  </footer>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+
+  <script type="module" src="js/app.js"></script>
 </body>
 </html>
