--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>東京精密発條株式会社システム</title>
+  <title>在庫管理 — QR + スプレッドシート</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="assets/tsh.png" />
   <meta property="og:image" content="assets/tsh.png" />
@@ -12,6 +12,10 @@
   <!-- ライブラリ -->
   <script defer src="https://unpkg.com/html5-qrcode"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- 追加: QR 生成 & ZIP -->
+  <script defer src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
 </head>
 <body class="bg-slate-50 text-slate-800 min-h-screen">
   <!-- Topbar -->
@@ -33,6 +37,7 @@
             <button id="btn-sync-push" class="block px-3 py-2 w-full text-left hover:bg-slate-100">書き込み</button>
           </div>
         </div>
+        <button id="btn-qr-batch" class="px-3 py-2 rounded-xl border hover:bg-slate-100">QR一括出力</button>
         <button id="btn-close-month" class="px-3 py-2 rounded-xl border hover:bg-slate-100">月次締め</button>
         <button id="btn-close-year" class="px-3 py-2 rounded-xl border hover:bg-slate-100">年度開始に設定</button>
         <button onclick="window.print()" class="px-3 py-2 rounded-xl border hover:bg-slate-100">印刷</button>
@@ -180,6 +185,29 @@
     </div>
   </div>
 
+  <!-- モーダル: QR一括出力 -->
+  <div id="modal-qr" class="hidden fixed inset-0 bg-black/40 grid place-items-center p-4">
+    <div class="bg-white w-full max-w-3xl rounded-2xl p-4 shadow-xl">
+      <div class="flex items-center justify-between mb-2">
+        <h2 class="text-lg font-semibold">QR一括出力</h2>
+        <button class="px-2 py-1 rounded-lg border" data-close>✕</button>
+      </div>
+      <div class="grid md:grid-cols-4 gap-3 mb-3">
+        <label class="grid"><span class="text-sm">サイズ(px)</span><input id="qr-size" type="number" value="320" class="px-3 py-2 rounded-xl border"/></label>
+        <label class="grid"><span class="text-sm">余白(px)</span><input id="qr-margin" type="number" value="4" class="px-3 py-2 rounded-xl border"/></label>
+        <label class="flex items-center gap-2"><input id="qr-label" type="checkbox" checked/><span>ラベル(名称/ID)を付与</span></label>
+        <label class="grid"><span class="text-sm">ベースURL</span><input id="qr-base" class="px-3 py-2 rounded-xl border" /></label>
+      </div>
+      <div class="flex gap-2 mb-3">
+        <button id="btn-qr-gen" class="px-3 py-2 rounded-xl border">生成</button>
+        <button id="btn-qr-zip" class="px-3 py-2 rounded-xl border">ZIPでダウンロード</button>
+        <button id="btn-qr-print" class="px-3 py-2 rounded-xl border">印刷用を開く</button>
+      </div>
+      <div id="qr-preview" class="grid grid-cols-2 md:grid-cols-4 gap-4 max-h-[50vh] overflow-auto"></div>
+      <div class="text-xs text-slate-500 mt-2">ファイル名は <code>{id}.png</code> で保存され、Spreadsheetの <code>inventory.id</code> と一致します。</div>
+    </div>
+  </div>
+
   <!-- フッター -->
   <footer class="max-w-7xl mx-auto px-4 py-6 text-xs text-slate-500 flex items-center justify-between">
     <div>© <span id="year"></span> Inventory Control</div>
@@ -188,5 +216,6 @@
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 
   <script type="module" src="js/app.js"></script>
+  <script type="module" src="js/qr_batch.js"></script>
 </body>
 </html>
